Print the A header.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function getSearchResults(str)
 			
 			var galleries = JSON.parse(xmlhttp.responseText);
 			
-			var lastch = 'A';
+			var lastch = ' ';
 			
 			for (var gallery in galleries)
 			{
